# swizzleinator

./: Cargo.toml  LICENSE  README.md
src/: format.rs  lib.rs
src/swizzle/: mod.rs  ps.rs  xbox.rs
